force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Approval_Email__c.field-meta.xml
<CustomField>
    <fullName>Approval_Email__c</fullName>
    <description>Approval Email for Approval Request.</description>
    <formula>HYPERLINK ( &quot;/apex/ApttusSubmitForApprovalPdfPage?sObjectType=Apttus_Approval__Approval_Request__c&amp;sObjectId=&quot;&amp;Id,&quot;Approval Email&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Email</label>
    <type>Text</type>
</CustomField>