force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Initial_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Initial_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N70000001my9pEAA</relationshipName>
    <type>Lookup</type>
</CustomField>