force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Formula_Sub_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Formula_Sub_Sequence__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>To convert the value of text into number from field Sub-Sequence of object Apttus Approval Request</description>
    <formula>VALUE( Apttus_Approval__Sequence__c )</formula>
    <label>Formula_Sub_Sequence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>