force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Promo_Approval_Seq__c.field-meta.xml
<CustomField>
    <fullName>Promo_Approval_Seq__c</fullName>
    <description>Formula Field which calculated  Approval Sequence for Promo.</description>
    <formula>If  ( AND(Apttus_Approval__SubprocessSequence__c &lt;= 12,Apttus_Approval__SubprocessSequence__c &gt;= 7),
    Apttus_Approval__SubprocessSequence__c - 6,
        If ( AND(Apttus_Approval__SubprocessSequence__c &lt;= 18,Apttus_Approval__SubprocessSequence__c &gt;= 13),
        Apttus_Approval__SubprocessSequence__c - 12,
            If ( AND(Apttus_Approval__SubprocessSequence__c &lt;= 24,Apttus_Approval__SubprocessSequence__c &gt;= 19),
                Apttus_Approval__SubprocessSequence__c - 18,
                    If ( AND(Apttus_Approval__SubprocessSequence__c &lt;= 30,Apttus_Approval__SubprocessSequence__c &gt;= 25),
                        Apttus_Approval__SubprocessSequence__c - 24,
                        Apttus_Approval__SubprocessSequence__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Approval Seq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>