force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/AMEA_Contract_Admin_Queue_Approval_Request.listView-meta.xml
<ListView>
    <fullName>AMEA_Contract_Admin_Queue_Approval_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>AMEA Contract Admin Queue</label>
    <queue>AMEA_Contract_Admin_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>