force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/AMEA_Incoterms_Approval_Queue_Approval_Request.listView-meta.xml
<ListView>
    <fullName>AMEA_Incoterms_Approval_Queue_Approval_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>AMEA Incoterms Approval Queue</label>
    <queue>AMEA_Incoterms_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>