force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/AMR_Contract_Admin_Queue_Approval_Request.listView-meta.xml
<ListView>
    <fullName>AMR_Contract_Admin_Queue_Approval_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>AMR Contract Admin Queue</label>
    <queue>AMR_Contract_Admin_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>