force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/AMR_Payment_Terms_Approval_Queue_Approval_Request.listView-meta.xml
<ListView>
    <fullName>AMR_Payment_Terms_Approval_Queue_Approval_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>AMR Payment Terms Approval Queue</label>
    <queue>AMR_Payment_Terms_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>