force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/APAC_Incoterms_Approval_Queue_Approval_Request.listView-meta.xml
<ListView>
    <fullName>APAC_Incoterms_Approval_Queue_Approval_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC Incoterms Approval Queue</label>
    <queue>APAC_Incoterms_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>