force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/Approval_History.listView-meta.xml
<ListView>
    <fullName>Approval_History</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Step_Name__c</columns>
    <columns>Apttus_Approval__Assigned_To_Link__c</columns>
    <columns>Apttus_Approval__StepSequenceString__c</columns>
    <columns>Apttus_Approval__DateApproved__c</columns>
    <columns>Apttus_Approval__Approver_Comments__c</columns>
    <columns>Apttus_Approval__Actual_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apttus_Approval__Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved,Rejected,Cancelled</value>
    </filters>
    <filters>
        <field>Is_Current_User_Equals_Approver__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Approval History</label>
</ListView>