force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/Apttus_Approval__AllApprovals.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__AllApprovals</fullName>
    <columns>Apttus_Approval__Object_Name__c</columns>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Step_Name__c</columns>
    <columns>Apttus_Approval__Assigned_To_Name__c</columns>
    <columns>Apttus_Approval__StepSequence__c</columns>
    <columns>Apttus_Approval__DateApproved__c</columns>
    <columns>Apttus_Approval__Approver_Comments__c</columns>
    <columns>Apttus_Approval__Actual_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Approvals</label>
</ListView>