force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/Apttus_Approval__MyApprovals.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__MyApprovals</fullName>
    <booleanFilter>(1 OR 2)</booleanFilter>
    <columns>Apttus_Approval__Object_Name__c</columns>
    <columns>Apttus_Approval__Object_Id_Link__c</columns>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Step_Name__c</columns>
    <columns>Apttus_Approval__Assigned_To_Link__c</columns>
    <columns>Apttus_Approval__StepSequenceString__c</columns>
    <columns>Apttus_Approval__DateApproved__c</columns>
    <columns>Apttus_Approval__Approver_Comments__c</columns>
    <columns>Apttus_Approval__Actual_Approver__c</columns>
    <columns>Approval_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Current_User_Equals_Approver__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_Current_User_Equals_Delegate_Approver__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Approvals</label>
</ListView>