force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/China_Incoterms_Approval_Queue_Approval_Request.listView-meta.xml
<ListView>
    <fullName>China_Incoterms_Approval_Queue_Approval_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>China Incoterms Approval Queue</label>
    <queue>China_Incoterms_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>