force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/CN03_Dx_Approval_Queue_Approval_Request.listView-meta.xml
<ListView>
    <fullName>CN03_Dx_Approval_Queue_Approval_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>CN03 Dx Approval Queue</label>
    <queue>CN03_Dx_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>