force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/Contract_Admin_Queue_Approval_Request.listView-meta.xml
<ListView>
    <fullName>Contract_Admin_Queue_Approval_Request</fullName>
    <columns>Apttus_Approval__DateAssigned__c</columns>
    <columns>Apttus_QPApprov__ProposalId__c</columns>
    <columns>Apttus_Approval__Initial_Submitter__c</columns>
    <columns>Apttus_Approval__Status_Link__c</columns>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Apttus_Approval__Status_Link__c</field>
        <operation>notContain</operation>
        <value>Approved,rejected,cancelled</value>
    </filters>
    <label>Contract Admin Queue</label>
    <queue>Contract_Admin_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>