force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/CP_Global_Approval_Queue_Approval_Request.listView-meta.xml
<ListView>
    <fullName>CP_Global_Approval_Queue_Approval_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>CP Global Approval Queue</label>
    <queue>CP_Global_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>